data/derived/fa15/progs/unify/prog4070.ml.out
Characters 77-79:
  | Sine e' -> sin(pi * eval(e', x, y))
                   ^^
Error: This expression has type float but an expression was expected of type
         int
